Set global max-width to prevent overflow

--- a/src/styles/global/_layout.scss
+++ b/src/styles/global/_layout.scss
@@ -1,6 +1,11 @@
 * {
 	box-sizing: border-box;
 }
+
+.global-wrapper {
+	max-width: 100%;
+	overflow-x: hidden;
+}
 	
 .container {
 	max-width: 1072px;
